# wifi-caddy

./: .gitignore  README.md  wifi-caddy.code-workspace
.github/workflows/: ci.yml
esp-wifi-caddy/: CHANGELOG.md  Cargo.toml  README.md  release.toml
esp-wifi-caddy/src/: flash_config.rs  fmt.rs  lib.rs  partition.rs  run.rs  storage.rs  wifi.rs
examples/wifi-example/: Cargo.toml  README.md  build.rs  espflash.toml  partitions.csv  wifi-example.code-workspace
examples/wifi-example/.cargo/: config.toml
examples/wifi-example/src/: main.rs
wifi-caddy/: CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
wifi-caddy-proc/: CHANGELOG.md  Cargo.toml  README.md
wifi-caddy-proc/src/: config_api.rs  config_form.rs  config_page_script.js  config_store.rs  field_attrs.rs  lib.rs  utils.rs
wifi-caddy-proc/tests/: compile_tests.rs
wifi-caddy-proc/tests/ui/: basic.rs
wifi-caddy/src/: config_storage.rs  lib.rs  run_http.rs
wifi-caddy/src/portal/: captive.rs  config_group.rs  config_page.css  config_page.rs  config_ui.rs  dhcp.rs  dns.rs  mod.rs  responses.rs
