[package]
name = "wifi-caddy-proc"
version = "0.1.0"
edition = "2024"
authors = ["liebman <liebman@zod.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.87"
description = "Proc macro for WiFi caddy config structs (derive WifiCaddyConfig)"
repository = "https://github.com/liebman/wifi-caddy"
keywords = ["wifi", "embassy", "proc-macro", "config", "embedded"]
categories = ["embedded", "no-std"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1"
wifi-caddy = { path = "../wifi-caddy" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.6"
enumset = "1.1.10"
embassy-sync = "0.8"
static_cell = { version = "2.1.1", default-features = false }
