[package]
name = "wifi-caddy"
version = "0.1.0"
edition = "2024"
authors = ["liebman <liebman@zod.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.93"
description = "Platform-agnostic config storage traits, HTTP config portal, and form generation for WiFi configuration managers"
repository = "https://github.com/liebman/wifi-caddy"
keywords = ["wifi", "embassy", "embedded", "config", "captive-portal"]
categories = ["embedded", "no-std"]

[features]
default = []
nightly = []
defmt = [
    "dep:defmt",
    "embassy-net/defmt",
    "embassy-time/defmt",
    "edge-http/defmt",
    "edge-nal-embassy/defmt",
]
log = ["dep:log", "edge-http/log"]
captive = ["dep:edge-captive"]
debug-server = []

[dependencies]
embassy-sync = { version = "0.8" }
enumset = "1.1.10"

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }

edge-http = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }
edge-nal = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }
edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0", default-features = false, features = [
    "dns",
    "proto-ipv4",
    "tcp",
    "udp",
] }
edge-dhcp = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }
embassy-executor = { version = "0.10.0" }
embassy-net = { version = "0.9.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "dns",
] }
embassy-time = { version = "0.5.0" }
embedded-io-async = { version = "0.7" }
static_cell = { version = "2.1.1", default-features = false }

# captive feature (DNS redirect)
edge-captive = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0", optional = true }
