[package]
name = "wifi-example"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.87"
description = "Minimal example: esp-wifi-caddy + wifi-caddy-proc, WiFi connect with example config"
publish = false


[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false

[profile.dev]
debug = true  # Symbols are nice and they don't increase the size on Flash
opt-level = 1

[[bin]]
name = "wifi-example"
path = "src/main.rs"

[features]
default = ["log"]
defmt = [
    "dep:defmt",
    "esp-alloc/defmt",
    "esp-backtrace/defmt",
    "esp-rtos/defmt",
    "esp-radio/defmt",
    "esp-println/defmt-espflash",
    "esp-storage/defmt",
    "esp-wifi-caddy/defmt",
]
log = [
    "dep:log",
    "esp-backtrace/println",
    "esp-rtos/log-04",
    "esp-radio/log-04",
    "esp-println/log-04",
    "esp-wifi-caddy/log",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-rtos/esp32s3",
    "esp-radio/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-storage/esp32s3",
]
esp32 = [
    "esp-hal/esp32",
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-rtos/esp32",
    "esp-radio/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-storage/esp32",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-rtos/esp32c6",
    "esp-radio/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-storage/esp32c6",
]
debug-server = ["esp-wifi-caddy/debug-server"]

[dependencies]
wifi-caddy = { path = "../../wifi-caddy" }
wifi-caddy-proc = { path = "../../wifi-caddy-proc" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.6"

esp-storage = { version = "0.8.1" }

esp-wifi-caddy = { path = "../../esp-wifi-caddy" }
esp-hal = { version = "1.0.0", features = ["unstable"] }
esp-alloc = { version = "0.9.0" }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp-radio"] }
esp-radio = { version = "0.17.0", features = ["esp-alloc", "smoltcp", "unstable", "wifi"] }
esp-backtrace = { version = "0.18.1", default-features = false, features = ["panic-handler"] }
esp-bootloader-esp-idf = { version = "0.4.0", default-features = false }
embassy-executor = { version = "0.9.1" }
embassy-time = { version = "0.5.0" }
embassy-sync = { version = "0.7.2" }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.8.0", features = ["dhcpv4", "medium-ethernet", "tcp", "udp", "dns"] }
defmt = { version = "1.0.1", optional = true }
static_cell = { version = "2.1.1", default-features = false }
enumset = { version = "1.1.10" }
esp-println = "0.16.1"
log = { version = "0.4", optional = true }
